Increase padding on copyright and reformat customheader.

--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
 					<div id="intro">
 						<h1>Crypto<br />
 						Made Easy.</h1>
-						<p class="subheading">Visit on 𝕏</p>
-						<h2 class="subheading"><a href="https://x.com/OFiDCrypt">@OF<span class="i">i</span>DCrypt</a></h2>
+						<div id="custom-subheading">
+							<p>Visit on 𝕏</p>
+							<h2><a href="https://x.com/OFiDCrypt">@OF<span class="i">i</span>DCrypt</a></h2>
+						</div>
 						
 						<!--<p>Site template by <a href="https://html5up.net">HTML5 UP</a> and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>-->
 						<ul class="actions">
