Eddited Footer Social split contact and fixed js paths from index.

--- a/index.html
+++ b/index.html
@@ -238,11 +238,11 @@
 
 			</div>
 			<!-- Link to non-critical JavaScript files -->
-			<script src="../assets/js/browser.min.js"></script>
-			<script src="../assets/js/jquery.scrollex.min.js"></script>
-			<script src="../assets/js/jquery.scrolly.min.js"></script>
-			<script src="../assets/js/util.js"></script>
-			<script src="../assets/js/breakpoints.min.js"></script>
-			<script src="../assets/js/main.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/main.js"></script>
 	</body>
 </html>
