--- a/pages/vipwithcode.html
+++ b/pages/vipwithcode.html
@@ -98,22 +98,23 @@
 						</script>
 					</section>
 					
+					<!-- Footer Social Location, Links & Other Contact -->
 					<section class="split contact">
-						<section class="alt">
-							<h3>Remote</h3>
-							<p>British Columbia, Canada</p>
-						</section>
 						<section>
-							<h3>Telegram</h3>
-							<p><a href="https://t.me/OFiDCrypt">@OFiDCrypt</a></p>
+							<h3>Location</h3>
+							<p>British Columbia, Canada</p>
 						</section>
 						<section>
 							<h3>Email</h3>
 							<p><a href="mailto:me@ofidcrypt.com">me@ofidcrypt.com</a></p>
 						</section>
 						<section>
+							<h3>Telegram</h3>
+							<p><a href="https://t.me/OFiDCrypt">@OFiDCrypt</a></p>
+						</section>
+						<section>
 							<h3>Discord</h3>
-							<p><a href="https://discordapp.com/users/1287308732275101777">@ofidcrypt</a></p>
+							<p><a href="https://discordapp.com/users/1287308732275101777">@OFiDCrypt</a></p>
 						</section>
 						<section>
 							<h3>Social</h3>
