Add meta description, add index page intro, move js to before body close, adjusted mobile intro display.

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 -->
 <html>
 	<head>
-		<title>Crypto Made Easy | by OFiDCrypt</title>
-		<link rel="icon" href="favicon.png.png" type="image/png" />
+		<link rel="icon" href="/favicon.png" type="image/png" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<title>Join the Crypto Community | OFiDCrypt</title>
+		<meta name="description" content="Join OFiDCrypt and explore the world of digital assets together! Understand cryptocurrency through simple apps, informative articles, and shared community experiences. Cryptocurrency made easy." />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<noscript><link rel="stylesheet" href="/assets/css/noscript.css" /></noscript>
 		<!-- Essential JS libraries if used by other scripts -->
-		<script src="assets/js/jquery.min.js"></script>
 		<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 	</head>
 	
@@ -24,10 +24,12 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Crypto<br />
+						<h1>Cryptocurrency<br />
 						Made Easy.</h1>
+						<p>"We open the door to understanding our World of Digital Assets together through simple apps, informative articles,<br>
+							and shared community experiences."</p>
 						<div id="custom-subheading">
-							<p>Visit on 𝕏</p>
+							<p>Visit us on 𝕏</p>
 							<h2><a href="https://x.com/OFiDCrypt">@OF<span class="i">i</span>DCrypt</a></h2>
 						</div>
 						
@@ -231,18 +233,19 @@
 
 				<!-- Copyright -->
 				<div id="copyright">
-					<ul><li><a href="#">Affiliates</a></li><li><a href="#">Disclaimers</a></li><li><a href="#">Contests</a></li><li><a href="pages/about.html">About</a></li></ul>
+					<ul><li><a href="#">Affiliates</a></li><li><a href="#">Disclaimers</a></li><li><a href="#">Contests</a></li><li><a href="/pages/about.html">About</a></li></ul>
 					<ul><li>&copy; OF<span class="i">i</span>DCrypt by Tokin ⬢ Cypher 2024</li></ul>
 					<ul><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
 			<!-- Link to non-critical JavaScript files -->
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="/assets/js/jquery.min.js"></script>
+			<script src="/assets/js/browser.min.js"></script>
+			<script src="/assets/js/jquery.scrollex.min.js"></script>
+			<script src="/assets/js/jquery.scrolly.min.js"></script>
+			<script src="/assets/js/util.js"></script>
+			<script src="/assets/js/breakpoints.min.js"></script>
+			<script src="/assets/js/main.js"></script>
 	</body>
 </html>
