--- a/pages/vipwithcode.html
+++ b/pages/vipwithcode.html
@@ -51,10 +51,11 @@
 									<span class="date">April 25, 2017</span>
 									<h1>This is<br />
 									VIP Lounge with Code</h1>
-									<p>You can't land beyond this point without the Code Wallet app. Perhaps you are some kind of special.<br />
-									It is here where the real fun begins, with cash links, contests, exclusive content and more. Stay tuned!.</p>
+									<p>You can't go beyond this point without the Code Wallet app. Perhaps you are some kind of special?<br />
+									It is here where the real fun begins, with cash links, contests, exclusive content and more. Stay tuned!</p>
+									<p>🚧<b>Under Construction</b>🚧</p>
 								</header>
-								<div class="image main"><img src="../assets/images/pic01.png" alt="" /></div>
+								<div class="image main"><img src="../assets/images/pic10.jpg" alt="" /></div>
 								<p>Discover the world of cryptocurrency through our articles and tools, designed to broaden your understanding and ease your journey. Dive into insightful content and useful resources that make the complex world of digital currency accessible to everyone. Embrace the knowledge that equips you to navigate and utilize cryptocurrencies with confidence.</p>
 								<p>Our platform is committed to helping you stay informed and empowered, guiding you through the dynamic landscape of our evolving digital economy. Join us on this exciting voyage and take control of your financial future."</p>
 							</section>
