Updated about page and moved elemts off navigation tree, added promo video and updated text.

--- a/pages/vipwithcode.html
+++ b/pages/vipwithcode.html
@@ -6,10 +6,11 @@
 -->
 <html>
 	<head>
-		<title>Crypto Made Easy | by OFiDCrypt</title>
 		<link rel="icon" href="../favicon.png.png" type="image/png" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<title>Join the Crypto Community | OFiDCrypt</title>
+		<meta name="description" content="Join OFiDCrypt and explore the world of digital assets together! Understand cryptocurrency through simple apps, informative articles, and shared community experiences. Cryptocurrency made easy." />
 		<link rel="stylesheet" href="../assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 		<!-- Essential JS libraries if used by other scripts -->
@@ -56,8 +57,6 @@
 									<p>🚧<b>Under Construction</b>🚧</p>
 								</header>
 								<div class="image main"><img src="../assets/images/pic10.jpg" alt="" /></div>
-								<p>Discover the world of cryptocurrency through our articles and tools, designed to broaden your understanding and ease your journey. Dive into insightful content and useful resources that make the complex world of digital currency accessible to everyone. Embrace the knowledge that equips you to navigate and utilize cryptocurrencies with confidence.</p>
-								<p>Our platform is committed to helping you stay informed and empowered, guiding you through the dynamic landscape of our evolving digital economy. Join us on this exciting voyage and take control of your financial future."</p>
 							</section>
 
 					</div>
