Updated section formating for about.html

--- a/pages/about.html
+++ b/pages/about.html
@@ -76,10 +76,14 @@
 									  });
 									});
 								  </script>
-									
-								<!-- Section Description -->													
-								<p>Discover the world of cryptocurrency through our articles and tools, designed to broaden your understanding and ease your journey. Dive into insightful content and useful resources that make the complex world of digital currency accessible to everyone. Embrace the knowledge that equips you to navigate and utilize cryptocurrencies with confidence.</p>
-								<p>Our platform is committed to helping you stay informed and empowered, guiding you through the dynamic landscape of our evolving digital economy. Join us on this exciting voyage and take control of your financial future."</p>
+								  
+								<!-- Section Heading -->
+								<header>
+									<h2>Learn, Earn & Have Fun</h2>
+									<!-- Section Description -->
+									<p>Discover the world of cryptocurrency through our articles and tools, designed to broaden your understanding and ease your journey. Dive into insightful content and useful resources that make the complex world of digital currency accessible to everyone. Embrace the knowledge that equips you to navigate and utilize cryptocurrencies with confidence.</p>
+									<p>Our platform is committed to helping you stay informed and empowered, guiding you through the dynamic landscape of our evolving digital economy. Join us on this exciting voyage and take control of your financial future.</p>
+								</header>
 							</section>
 					</div>
 
