Previous commit failed to submit?

--- a/pages/about.html
+++ b/pages/about.html
@@ -77,7 +77,7 @@
 									});
 								  </script>
 								  
-								<!-- Section Heading -->
+								<!-- Section Heading --
 								<header>
 									<h2>Learn, Earn & Have Fun</h2>
 									<!-- Section Description -->
