Added GA4 tags to pages.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
 		<!-- Essential JS libraries if used by other scripts -->
 		<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 	</head>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-3KX9VK5CCH"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-3KX9VK5CCH');
+	</script>
 	
 	<body class="is-preload">
 
