Added allignment to h2 + p, added images, reordered text on about.

--- a/posts-page2.html
+++ b/posts-page2.html
@@ -6,9 +6,9 @@
             <article>
                 <header>
                     <span class="date">May 5, 2017</span>
-                    <h2><a href="#">Article Heading<br /> What's Next?</a></h2>
+                    <h2><a href="#">More Articles<br /> Coming soon</a></h2>
                 </header>
-                <a href="#" class="image fit"><img src="assets/images/pic03.jpg" alt="" /></a>
+                <a href="#" class="image fit"><img src="assets/images/pic02.jpg" alt="" /></a>
                 <p>"Exploring additional topics brings even more insights and perspectives..."</p>
                 <ul class="actions special">
                     <li class="button">Coming Soon</li>
@@ -17,9 +17,9 @@
             <article>
                 <header>
                     <span class="date">May 5, 2017</span>
-                    <h2><a href="#">Article Heading<br /> What's Next?</a></h2>
+                    <h2><a href="#">More Articles<br /> Coming soon</a></h2>
                 </header>
-                <a href="#" class="image fit"><img src="assets/images/pic03.jpg" alt="" /></a>
+                <a href="#" class="image fit"><img src="assets/images/pic02.jpg" alt="" /></a>
                 <p>"Exploring additional topics brings even more insights and perspectives..."</p>
                 <ul class="actions special">
                     <li class="button">Coming Soon</li>
@@ -28,9 +28,9 @@
             <article>
                 <header>
                     <span class="date">May 5, 2017</span>
-                    <h2><a href="#">Article Heading<br /> What's Next?</a></h2>
+                    <h2><a href="#">More Articles<br /> Coming soon</a></h2>
                 </header>
-                <a href="#" class="image fit"><img src="assets/images/pic03.jpg" alt="" /></a>
+                <a href="#" class="image fit"><img src="assets/images/pic02.jpg" alt="" /></a>
                 <p>"Exploring additional topics brings even more insights and perspectives..."</p>
                 <ul class="actions special">
                     <li class="button">Coming Soon</li>
@@ -39,9 +39,9 @@
             <article>
                 <header>
                     <span class="date">May 5, 2017</span>
-                    <h2><a href="#">Article Heading<br /> What's Next?</a></h2>
+                    <h2><a href="#">More Articles<br /> Coming soon</a></h2>
                 </header>
-                <a href="#" class="image fit"><img src="assets/images/pic03.jpg" alt="" /></a>
+                <a href="#" class="image fit"><img src="assets/images/pic02.jpg" alt="" /></a>
                 <p>"Exploring additional topics brings even more insights and perspectives..."</p>
                 <ul class="actions special">
                     <li class="button">Coming Soon</li>
