--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 										<span class="date">April 22, 2017</span>
 										<h2><a href="#">Article Heading<br /> What's Next?</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="assets/images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="assets/images/pic02.jpg" alt="" /></a>
 									<p>"Let’s begin by exploring this fascinating topic. More often than not, we find ourselves
 										navigating through diverse perspectives. Such exploration brings new insights and expands our
 										understanding, making it a journey worth undertaking."</p>
@@ -130,15 +130,15 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Article Heading<br /> What's Next?</a></h2>
+										<span class="date">October 21, 2024</span>
+										<h2><a href="#">03 Cryptocurrency 101:<br /> Fundamentals</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="assets/images/pic04.jpg" alt="" /></a>
-									<p>"Let’s begin by exploring this fascinating topic. More often than not, we find ourselves
-										navigating through diverse perspectives. Such exploration brings new insights and expands our
-										understanding, making it a journey worth undertaking."</p>
+									<a href="https://pennypost.co/p/816005386/03-crypto-101-fundamentals--breaking-barriers" class="image fit"><img src="assets/images/pic04.jpg" alt="" /></a>
+									<p>In the Crypto 101 Series, learn about what keeps people cautious about crypto, and how this feeling is
+										derived from what's "unknown". When you start breaking down what crypto actually is and how it compares to
+										current financial systems, there really should be no barriers left to hold you back.</p>
 									<ul class="actions special">
-										<li class="button">Coming Soon</li>
+										<li class="button">Preview</li>
 									</ul>
 								</article>
 								<article>
@@ -146,7 +146,7 @@
 										<span class="date">February 29, 2104</span>
 										<h2><a href="#">Article Heading<br /> What's Next?</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="assets/images/pic07.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="assets/images/pic02.jpg" alt="" /></a>
 									<p>"Let’s begin by exploring this fascinating topic. More often than not, we find ourselves
 										navigating through diverse perspectives. Such exploration brings new insights and expands our
 										understanding, making it a journey worth undertaking."</p>
