--- a/pages/about.html
+++ b/pages/about.html
@@ -61,11 +61,10 @@
 									<span class="date">Est. 2024</span>
 									<h1>About Us<br />
 									And What We Do</h1>
-									<p>Tokin ⬢ Cypher is the Identity Verified OFiDCrypt creator, publishing articles on Pennypost.co, powered
-										by Code Inc.</p>
+									<p>Our platform is committed to helping you stay informed and empowered, guiding you through the dynamic landscape of our evolving digital economy. Join us on this exciting voyage and take control of your financial future.</p>
 								</header>
 								<div class="video main">
-									<video id="myVideo" width="100%" controls autoplay poster="../assets/images/bglogo01.png">
+									<video id="myVideo" width="100%" controls poster="../assets/images/bglogo01.png">
 									  <source src="../assets/videos/vidlogo01.MP4" type="video/mp4">
 									</video>
 								  </div>
@@ -90,8 +89,9 @@
 								<header>
 									<h2>Learn, Earn & Have Fun</h2>
 									<!-- Section Description -->
-									<p>Discover the world of cryptocurrency through our articles and tools, designed to broaden your understanding and ease your journey. Dive into insightful content and useful resources that make the complex world of digital currency accessible to everyone. Embrace the knowledge that equips you to navigate and utilize cryptocurrencies with confidence.</p>
-									<p>Our platform is committed to helping you stay informed and empowered, guiding you through the dynamic landscape of our evolving digital economy. Join us on this exciting voyage and take control of your financial future.</p>
+									<p>Discover the world of cryptocurrency through our articles and tools, designed to broaden yourunderstanding and ease your journey. Dive into insightful content and useful resources that make the complex world of digital currency accessible to everyone. Embrace the knowledge that equips you to navigate and utilize cryptocurrencies with confidence.</p>
+									<h2>Who is Tokin ⬢ Cypher</h2>
+									<p>Tokin ⬢ Cypher is the official alias of OFiDCrypt creator, <b><a href="https://x.com/OFiDCrypt">Verified by ID</b> on <b>𝕏</a></b></p>
 								</header>
 							</section>
 					</div>
