--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 					<article class="post featured">
 						<header class="major">
 							<span class="date">Featured</span>
-							<h2><a href="#">Learn With <br />Articles</a></h2>
+							<h2>Learn With <br />Articles</h2>
 							<p>Click "Preview Article" below to get a sneak peek of contents, available via Code Wallet for only $0.25
 							</p>
 						</header>
@@ -112,7 +112,8 @@
 										navigating through diverse perspectives. Such exploration brings new insights and expands our
 										understanding, making it a journey worth undertaking."</p>
 									<ul class="actions special">
-										<li class="button">Coming Soon</li>
+										<li><a href="#"
+											class="button">Coming Soon</a></li>
 									</ul>
 								</article>
 								<article>
@@ -125,20 +126,22 @@
 										navigating through diverse perspectives. Such exploration brings new insights and expands our
 										understanding, making it a journey worth undertaking."</p>
 									<ul class="actions special">
-										<li class="button">Coming Soon</li>
+										<li><a href="#"
+											class="button">Coming Soon</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date">October 21, 2024</span>
-										<h2><a href="#">03 Cryptocurrency 101:<br /> Fundamentals</a></h2>
+										<h2><a href="https://pennypost.co/p/816005386/03-crypto-101-fundamentals--breaking-barriers">03 Cryptocurrency 101:<br /> Fundamentals</a></h2>
 									</header>
 									<a href="https://pennypost.co/p/816005386/03-crypto-101-fundamentals--breaking-barriers" class="image fit"><img src="assets/images/pic04.jpg" alt="" /></a>
 									<p>In the Crypto 101 Series, learn about what keeps people cautious about crypto, and how this feeling is
 										derived from what's "unknown". When you start breaking down what crypto actually is and how it compares to
 										current financial systems, there really should be no barriers left to hold you back.</p>
 									<ul class="actions special">
-										<li class="button">Preview</li>
+										<li><a href="https://pennypost.co/p/816005386/03-crypto-101-fundamentals--breaking-barriers"
+											class="button">Preview</a></li>
 									</ul>
 								</article>
 								<article>
@@ -151,7 +154,8 @@
 										navigating through diverse perspectives. Such exploration brings new insights and expands our
 										understanding, making it a journey worth undertaking."</p>
 									<ul class="actions special">
-										<li class="button">Coming Soon</li>
+										<li><a href="#"
+											class="button">Coming Soon</a></li>
 									</ul>
 								</article>
 							</section>
