--- a/posts-page2.html
+++ b/posts-page2.html
@@ -11,7 +11,8 @@
                 <a href="#" class="image fit"><img src="assets/images/pic02.jpg" alt="" /></a>
                 <p>"Exploring additional topics brings even more insights and perspectives..."</p>
                 <ul class="actions special">
-                    <li class="button">Coming Soon</li>
+                    <li><a href="#"
+                        class="button">Coming Soon</a></li>
                 </ul>
             </article>
             <article>
@@ -22,7 +23,8 @@
                 <a href="#" class="image fit"><img src="assets/images/pic02.jpg" alt="" /></a>
                 <p>"Exploring additional topics brings even more insights and perspectives..."</p>
                 <ul class="actions special">
-                    <li class="button">Coming Soon</li>
+                    <li><a href="#"
+                        class="button">Coming Soon</a></li>
                 </ul>
             </article>
             <article>
@@ -33,7 +35,8 @@
                 <a href="#" class="image fit"><img src="assets/images/pic02.jpg" alt="" /></a>
                 <p>"Exploring additional topics brings even more insights and perspectives..."</p>
                 <ul class="actions special">
-                    <li class="button">Coming Soon</li>
+                    <li><a href="#"
+                        class="button">Coming Soon</a></li>
                 </ul>
             </article>
             <article>
@@ -44,7 +47,8 @@
                 <a href="#" class="image fit"><img src="assets/images/pic02.jpg" alt="" /></a>
                 <p>"Exploring additional topics brings even more insights and perspectives..."</p>
                 <ul class="actions special">
-                    <li class="button">Coming Soon</li>
+                    <li><a href="#"
+                        class="button">Coming Soon</a></li>
                 </ul>
             </article>
         </section>
