--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">April 24, 2017</span>
+										<span class="date">February 29, 2104</span>
 										<h2><a href="#">Article Heading<br /> What's Next?</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="assets/images/pic02.jpg" alt="" /></a>
@@ -146,16 +146,16 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">February 29, 2104</span>
-										<h2><a href="#">Article Heading<br /> What's Next?</a></h2>
+										<span class="date">October 21, 2104</span>
+										<h2><a href="https://pennypost.co/p/723123949/04-learn-about-a-crypto-project-kin-token"></a>04 Learn About a Crypto Project: Kin Token</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="assets/images/pic02.jpg" alt="" /></a>
-									<p>"Let’s begin by exploring this fascinating topic. More often than not, we find ourselves
-										navigating through diverse perspectives. Such exploration brings new insights and expands our
-										understanding, making it a journey worth undertaking."</p>
+									<a href="https://pennypost.co/p/723123949/04-learn-about-a-crypto-project-kin-token" class="image fit"><img src="assets/images/pic05.jpg" alt="" /></a>
+									<p>Learn about a new cryptocurrency called Kin, and how it has the potential to replicate the success and growth of Bitcoin.
+										It enables you to be able to sign in to a new era of online services where you can interact and make purchases in just a tap!
+										You can  also send money to friends,aligning with the vision of decentralized, permissionless transactions.</p>
 									<ul class="actions special">
-										<li><a href="#"
-											class="button">Coming Soon</a></li>
+										<li><a href="https://pennypost.co/p/723123949/04-learn-about-a-crypto-project-kin-token"
+											class="button">Preview</a></li>
 									</ul>
 								</article>
 							</section>
