Added articles 1 and 2 with images and update text and spacing errors.

--- a/index.html
+++ b/index.html
@@ -104,40 +104,40 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">February 29, 2104</span>
-										<h2><a href="#">Article Heading<br /> What's Next?</a></h2>
+										<span class="date">October 11, 2104</span>
+										<h2><a href="https://pennypost.co/p/676825480/01-a-beginners-introduction-to-cryptocurrency">01 A Beginners Introduction<br /> to Crypto</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="assets/images/pic02.jpg" alt="" /></a>
-									<p>"Let’s begin by exploring this fascinating topic. More often than not, we find ourselves
-										navigating through diverse perspectives. Such exploration brings new insights and expands our
-										understanding, making it a journey worth undertaking."</p>
+									<a href="https://pennypost.co/p/676825480/01-a-beginners-introduction-to-cryptocurrency" class="image fit"><img src="assets/images/pic06.jpg" alt="" /></a>
+									<p>Learning the absolute basics from someone other than huge corporations can remove bias. 
+										It is important to our brand that we provide the necessary knowledge for people to make 
+										their own decisions! Enjoy this fresh take on an intro to crypto.</p>
 									<ul class="actions special">
-										<li><a href="#"
-											class="button">Coming Soon</a></li>
+										<li><a href="https://pennypost.co/p/676825480/01-a-beginners-introduction-to-cryptocurrency"
+											class="button">Preview</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Article Heading<br /> What's Next?</a></h2>
+										<span class="date">October 12, 2024</span>
+										<h2><a href="https://pennypost.co/p/282953050/02-the-risks-of-meme-coins">02 The Risks of<br /> Meme Coins</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="assets/images/pic02.jpg" alt="" /></a>
-									<p>"Let’s begin by exploring this fascinating topic. More often than not, we find ourselves
-										navigating through diverse perspectives. Such exploration brings new insights and expands our
-										understanding, making it a journey worth undertaking."</p>
+									<a href="https://pennypost.co/p/282953050/02-the-risks-of-meme-coins" class="image fit"><img src="assets/images/pic07.jpg" alt="" /></a>
+									<p>Many investment opportunities can exist in crypto, and it's easy to see how it can become overwhelming. The trick is knowing what 
+										to look for to spot a project’s intent. By project, I mean a crypto coin or token. Some cryptocurrencies are not controlled by 
+										any single entity, known as decentralization. Some are, and now you'll be equipped to spot them.</p>
 									<ul class="actions special">
-										<li><a href="#"
-											class="button">Coming Soon</a></li>
+										<li><a href="https://pennypost.co/p/282953050/02-the-risks-of-meme-coins"
+											class="button">Preview</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date">October 21, 2024</span>
-										<h2><a href="https://pennypost.co/p/816005386/03-crypto-101-fundamentals--breaking-barriers">03 Cryptocurrency 101:<br /> Fundamentals</a></h2>
+										<h2><a href="https://pennypost.co/p/816005386/03-crypto-101-fundamentals--breaking-barriers">03 Crypto 101:<br /> Fundamentals</a></h2>
 									</header>
 									<a href="https://pennypost.co/p/816005386/03-crypto-101-fundamentals--breaking-barriers" class="image fit"><img src="assets/images/pic04.jpg" alt="" /></a>
-									<p>In the Crypto 101 Series, learn about what keeps people cautious about crypto, and how this feeling is
-										derived from what's "unknown". When you start breaking down what crypto actually is and how it compares to
+									<p>In the Crypto 101 Series, learn about what keeps people cautious about crypto, and how this feeling is 
+										derived from what's "unknown". When you start breaking down what crypto actually is and how it compares to 
 										current financial systems, there really should be no barriers left to hold you back.</p>
 									<ul class="actions special">
 										<li><a href="https://pennypost.co/p/816005386/03-crypto-101-fundamentals--breaking-barriers"
@@ -150,9 +150,9 @@
 										<h2><a href="https://pennypost.co/p/723123949/04-learn-about-a-crypto-project-kin-token"></a>04 Learn About a Crypto Project: Kin Token</a></h2>
 									</header>
 									<a href="https://pennypost.co/p/723123949/04-learn-about-a-crypto-project-kin-token" class="image fit"><img src="assets/images/pic05.jpg" alt="" /></a>
-									<p>Learn about a new cryptocurrency called Kin, and how it has the potential to replicate the success and growth of Bitcoin.
-										It enables you to be able to sign in to a new era of online services where you can interact and make purchases in just a tap!
-										You can  also send money to friends,aligning with the vision of decentralized, permissionless transactions.</p>
+									<p>Learn about a new cryptocurrency called Kin, and how it has the potential to replicate the success and growth of Bitcoin. 
+										It enables you to be able to sign in to a new era of online services where you can interact and make purchases in just a tap! 
+										You can  also send money to friends, aligning with the vision of decentralized, permissionless transactions.</p>
 									<ul class="actions special">
 										<li><a href="https://pennypost.co/p/723123949/04-learn-about-a-crypto-project-kin-token"
 											class="button">Preview</a></li>
