--- a/pages/about.html
+++ b/pages/about.html
@@ -87,9 +87,9 @@
 								  
 								<!-- Section Heading -->
 								<header>
-									<h2>Learn, Earn & Have Fun</h2>
+									<h2>Learn, Earn & Spend</h2>
 									<!-- Section Description -->
-									<p>Discover the world of cryptocurrency through our articles and tools, designed to broaden yourunderstanding and ease your journey. Dive into insightful content and useful resources that make the complex world of digital currency accessible to everyone. Embrace the knowledge that equips you to navigate and utilize cryptocurrencies with confidence.</p>
+									<p>Discover the world of cryptocurrency through our articles and tools, designed to broaden your understanding and ease your journey. Dive into insightful content and useful resources that make the complex world of digital currency accessible to everyone. Embrace the knowledge that equips you to navigate and utilize cryptocurrencies with confidence.</p>
 									<h2>Who is Tokin ⬢ Cypher</h2>
 									<p>Tokin ⬢ Cypher is the official alias of the OFiDCrypt creator, <b><a href="https://x.com/OFiDCrypt">Verified by ID</b> on <b>𝕏</a></b></p>
 								</header>
