Adjusted article h2 alignment with me rule for h2 article posts. added important js to head and ga4 tags moved inside head.

--- a/index.html
+++ b/index.html
@@ -1,22 +1,9 @@
 <!DOCTYPE HTML>
-<!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+<!--Massively by HTML5 UP | html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)-->
 <html>
 	<head>
-		<link rel="icon" href="/favicon.png" type="image/png" />
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<title>Join the Crypto Community | OFiDCrypt</title>
-		<meta name="description" content="Join OFiDCrypt and explore the world of digital assets together! Understand cryptocurrency through simple apps, informative articles, and shared community experiences. Cryptocurrency made easy." />
-		<link rel="stylesheet" href="/assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="/assets/css/noscript.css" /></noscript>
-		<!-- Essential JS libraries if used by other scripts -->
-		<script src="https://www.google.com/recaptcha/api.js" async defer></script>
-	</head>
-	<!-- Google tag (gtag.js) -->
+			<!-- Google tag (gtag.js) -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-3KX9VK5CCH"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
@@ -25,7 +12,19 @@
 
 		gtag('config', 'G-3KX9VK5CCH');
 	</script>
-	
+		<link rel="icon" href="/favicon.png" type="image/png" />
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<title>Join the Crypto Community | OFiDCrypt</title>
+		<meta name="description" content="Join OFiDCrypt and explore the world of digital assets together! Understand cryptocurrency through simple apps, informative articles, and shared community experiences. Cryptocurrency made easy." />
+		<link rel="stylesheet" href="/assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="/assets/css/noscript.css" /></noscript>
+		<!-- Essential JS libraries if used by other scripts -->
+		<script src="/assets/js/jquery.min.js"></script>
+		<script src="/assets/js/browser.min.js"></script>
+		<script src="https://www.google.com/recaptcha/api.js" async defer></script>
+	</head>
+
 	<body class="is-preload">
 
 		<!-- Wrapper -->
@@ -250,8 +249,6 @@
 
 			</div>
 			<!-- Link to non-critical JavaScript files -->
-			<script src="/assets/js/jquery.min.js"></script>
-			<script src="/assets/js/browser.min.js"></script>
 			<script src="/assets/js/jquery.scrollex.min.js"></script>
 			<script src="/assets/js/jquery.scrolly.min.js"></script>
 			<script src="/assets/js/util.js"></script>
