--- a/pages/about.html
+++ b/pages/about.html
@@ -1,12 +1,18 @@
 <!DOCTYPE HTML>
-<!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+<!--Massively by HTML5 UP | html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)-->
 <html>
 	<head>
-		<link rel="icon" href="../favicon.png.png" type="image/png" />
+			<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-3KX9VK5CCH"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-3KX9VK5CCH');
+	</script>
+		<link rel="icon" href="../favicon.png" type="image/png" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<title>Join the Crypto Community | OFiDCrypt</title>
@@ -15,16 +21,8 @@
 		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 		<!-- Essential JS libraries if used by other scripts -->
 		<script src="../assets/js/jquery.min.js"></script>
+		<script src="../assets/js/browser.min.js"></script>
 		<script src="https://www.google.com/recaptcha/api.js" async defer></script>
-		<!-- Google tag (gtag.js) -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-3KX9VK5CCH"></script>
-		<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag() { dataLayer.push(arguments); }
-			gtag('js', new Date());
-
-			gtag('config', 'G-3KX9VK5CCH');
-</script>
 	</head>	
 	
 	<body class="is-preload">
