Minor text and date adjustments, plus addd link to getcode image VIP.

--- a/pages/vipwithcode.html
+++ b/pages/vipwithcode.html
@@ -63,7 +63,12 @@
 									It is here where the real fun begins, with cash links, contests, exclusive content and more. Stay tuned!</p>
 									<p>🚧 <b>Under Construction</b> 🚧</p>
 								</header>
-								<div class="image main"><img src="../assets/images/pic10.jpg" alt="" /></div>
+								<div class="image main">
+									<a href="https://getcode.com" target="_blank">
+										<img src="../assets/images/pic10.jpg" alt="" />
+									</a>
+								</div>
+								
 							</section>
 
 					</div>
