Updated VIP page with Code promo video and image, plus description.

--- a/pages/about.html
+++ b/pages/about.html
@@ -77,7 +77,7 @@
 										video.addEventListener('ended', function() {
 										  this.currentTime = 0; // Reset video to start
 										  this.pause(); // Pause the video
-										  this.poster = '../assets/images/poster.jpg'; // Set the new poster image
+										  this.poster = '../assets/images/bglogo01.png'; // Set the new poster image
 										});
 									  });
 									});
