Changed the order of js files, moveds to head to replicate last time logo scrolled in on mobile, placed main.js script after Featured Post.

--- a/index.html
+++ b/index.html
@@ -20,8 +20,13 @@
 		<link rel="stylesheet" href="/assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="/assets/css/noscript.css" /></noscript>
 		<!-- Essential JS libraries if used by other scripts -->
-		<script src="/assets/js/jquery.min.js"></script>
-		<script src="/assets/js/browser.min.js"></script>
+		<script src="assets/js/browser.min.js"></script>
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrollex.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
+		<script src="assets/js/main.js"></script>
 		<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 	</head>
 
@@ -85,6 +90,8 @@
 									class="button large">Preview Article</a></li>
 						</ul>
 					</article>
+					<!-- Link to the JavaScript file -->					
+					<script src="/assets/js/main.js"></script>
 				
 					<!-- Header for Pagination -->
 					<header>
@@ -249,10 +256,6 @@
 
 			</div>
 			<!-- Link to non-critical JavaScript files -->
-			<script src="/assets/js/jquery.scrollex.min.js"></script>
-			<script src="/assets/js/jquery.scrolly.min.js"></script>
-			<script src="/assets/js/util.js"></script>
-			<script src="/assets/js/breakpoints.min.js"></script>
-			<script src="/assets/js/main.js"></script>
+			 
 	</body>
 </html>
