Reverted to old layout of js, added defer to main.js.

--- a/index.html
+++ b/index.html
@@ -20,12 +20,8 @@
 		<link rel="stylesheet" href="/assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="/assets/css/noscript.css" /></noscript>
 		<!-- Essential JS libraries if used by other scripts -->
-		<script src="assets/js/browser.min.js"></script>
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/jquery.scrollex.min.js"></script>
-		<script src="assets/js/jquery.scrolly.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<script src="assets/js/breakpoints.min.js"></script>
+		<script src="assets/js/browser.min.js" defer></script>
+		<script src="/assets/js/main.js" defer></script>
 		<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 	</head>
 
@@ -88,10 +84,8 @@
 							<li><a href="https://pennypost.co/p/723123949/04-learn-about-a-crypto-project-kin-token"
 									class="button large">Preview Article</a></li>
 						</ul>
-					</article>
-					<!-- Link to the JavaScript file -->					
-					<script src="/assets/js/main.js"></script>
-				
+					</article>				
+
 					<!-- Header for Pagination -->
 					<header>
 						<div class="pagination">
@@ -255,6 +249,10 @@
 
 			</div>
 			<!-- Link to non-critical JavaScript files -->
-			 
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
 	</body>
 </html>
